--- a/00-title.tex
+++ b/00-title.tex
@@ -17,9 +17,9 @@
 	\begin{flushleft}
 		\fontsize{12pt}{0.8\baselineskip}\selectfont 
 		
-		ФАКУЛЬТЕТ \uline{<<\textbf{ФАКУЛЬТЕТ}>> \hfill}
+		ФАКУЛЬТЕТ \uline{<<\textbf{Информатика и системы управления}>> \hfill}
 
-		КАФЕДРА \uline{\mbox{\hspace{4mm}} <<\textbf{КАФЕДРА}>> \hfill}
+		КАФЕДРА \uline{\mbox{\hspace{4mm}} <<\textbf{Программное обеспечение ЭВМ и информационные технологии}>> \hfill}
 	\end{flushleft}
 
 	\vfill
@@ -29,7 +29,7 @@
 
 		\textbf{РАСЧЕТНО-ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}
 
-		\textbf{\textit{К ВЫПУСКНОЙ КВАЛИФИКАЦИОННОЙ РАБОТЕ}}
+		\textbf{\textit{К  КУРСОВОЙ РАБОТЕ}}
 
 		\textbf{\textit{НА ТЕМУ:}}
 	\end{center}
@@ -37,7 +37,7 @@
 	\begin{center}
 		\fontsize{18pt}{0.6cm}\selectfont 
 		
-		<<Крутая тема>>
+		Создание информационной системы для онлайн трекера времени
 		
 	\end{center}
 
@@ -47,28 +47,24 @@
 		\fontsize{12pt}{0.7\baselineskip}\selectfont
 		\centering
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Студент группы \textbf{<ГРУППА>} & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{<Студент>} \hfill} \\
+			Студент группы \textbf{ИУ7-63Б} & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{Д.Ю Неумоин} \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 
 		\vspace{\baselineskip}
 
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Руководитель ВКР & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{<Руководитель>} \hfill} \\
+			Руководитель курсовой работы & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{Д.А. Кузнецов} \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 
 		\vspace{\baselineskip}
 
-		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Нормоконтролер & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{<Нормоконтролер>} \hfill} \\
-			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
-		\end{signstabular}
 	\end{table}
 
 	\vfill
 
 	\begin{center}
-		\normalsize \textit{\textbf{202\_} г.}
+		\normalsize \textit{\textbf{\the\year{}} г.}
 	\end{center}
 \end{titlepage}
