--- a/01-abstract.tex
+++ b/01-abstract.tex
@@ -1,7 +1,25 @@
 \section*{РЕФЕРАТ}
 
-Расчетно-пояснительная записка \pageref{LastPage} с., \totalfigures\ рис., \totaltables\ табл., Х ист., Х прил.
+Объектом разработки является информационная система для онлайн трекера времени.
 
-КЛЮЧЕВЫЕ СЛОВА
+Цель работы -- спроектировать и реализовать базу данных, содержащую данные учёта затраченного времени пользователей, разработать программное обеспечение, которое позволит работать с этой базой данных.
+
+Чтобы достигнуть поставленной цели, требуется решить следующие задачи:
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item проанализировать варианты модели данных и выбрать подходящий вариант для решения задачи;
+	\item проанализировать существующие СУБД и выбрать удовлетворяющие требованиям к хранению данных;
+	\item спроектировать базу данных, описать ее сущности и связи;
+	\item реализовать программное обеспечение, предоставляющее интерфейс доступа к данным.
+\end{itemize}
+
+Готовое приложение позволяет создавать записи о затраченном времени, создавать проекты, цели, а также добавлять пользователей в друзья и смотреть их статистику.
+
+Приложение реализовано на языке Golang, в качестве СУБД была выбрана PostgreSQL.
+
+Результатом исследования является уменьшение времени ответа конечной точки за счет кеширования ответов на 15\%.
+
+КЛЮЧЕВЫЕ СЛОВА: трекер времени, базы данных, SQL, NoSQL, \\PostgreSQL, Redis, Docker, Golang, REST API, кеширование.
+
+Расчетно-пояснительная записка \pageref{LastPage} с., \totalfigures\ рис., \totaltables\ табл., 17 ист., 5 прил.
 
 \pagebreak
