--- a/03-intro.tex
+++ b/03-intro.tex
@@ -1,4 +1,17 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
 
+В современном мире все больше людей сталкиваются с проблемой управления временем. Неумение правильно распределить свое время может привести к неприятным последствиям, как для личной жизни, так и для работы. Именно поэтому создание информационной системы для онлайн трекера времени является актуальной темой для исследования. Ее основная задача заключается в организации записи и анализа затраченного времени, что позволяет максимально эффективно использовать его в дальнейшем. 
+
+Реализация системы требует наличия базы данных и методов взаимодействия с ней.
+
+Цель работы -- спроектировать и реализовать базу данных, содержащую данные учёта затраченного времени пользователей, разработать программное обеспечение, которое позволит работать с этой базой данных.
+
+Для достижения  поставленной цели, требуется решить следующие задачи:
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item проанализировать варианты модели данных и выбрать подходящий вариант для решения задачи;
+	\item проанализировать существующие СУБД и выбрать удовлетворяющие требованиям к хранению данных;
+	\item спроектировать базу данных, описать ее сущности и связи;
+	\item реализовать программное обеспечение, которое позволит получить доступ к данным.
+\end{itemize}
 \pagebreak
