--- a/30-technology.tex
+++ b/30-technology.tex
@@ -1,3 +1,135 @@
 \section{Технологическая часть}
+\subsection{Выбор СУБД}
 
-\pagebreak
+В данной работе в качестве основной СУБД была выбрана PostgreSQL \cite{postgres}, так как обладает следующими свойствами:
+
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item надежность: PostgreSQL обеспечивает целостность данных и защиту от потери информации;
+	\item гибкость: база данных поддерживает множество функция и широкий спектр языков программирования, предоставляя различные методы доступа к данным;
+	\item поддерживает сложные структуры и широкий спектр встроенных и
+	определяемых пользователем типов данных.
+\end{itemize}
+
+В качестве базы данных сессий был выбран Redis\cite{redis}. Это хранилище удовлетворяет всем необходимым требованиям(in-memory key-value хранилище).  Кроме этого, Redis обладает простотой в использовании и интеграции с различными языками программирования.
+
+\subsection{Выбор cредства реализации приложения}
+В данное работе приложением является Web-сервер, доступ  к которому осуществляется с помощью REST API \cite{rest-api}. В качестве языка реализации сервера был выбран Golang \cite{golang}. Этот язык изначально был  разработан для создания масштабируемых и высокопроизводительных систем, также он имеет множество различных библиотек для написания Web-приложений.
+
+Для взаимодействия с базами данных будут использоваться встроенные в Golang драйвера.
+
+Для реализации REST API был выбран фреймворк echo \cite{echo}.
+
+В качестве инструмента сборки и развертывания используется Docker\cite{docker}, который позволяет  упростить процесс интеграции приложения и базы данных. Docker-контейнеры могут быть запущены на любой платформе, которая поддерживает Docker, что упрощает перенос приложений между различными окружениями.
+
+\subsection{Детали реализации}
+Система представляет собой Web-приложение, принимающее запросы от клиентов, обрабатывая и возвращая ответ.
+
+Взаимодействие с серверов реализовано через REST API.  
+
+Сценарии создания объектов базы данных приведены в листингах \ref{lst:create_db_1} -- \ref{lst:create_db_2}.
+
+Для создания ролевой модели и триггеров используются сценарий, приведенный в листингах  \ref{lst:role} -- \ref{lst:role_2}.
+
+Пример взаимодействия с СУБД PostgresSQL и Redis приведены в листингах  \ref{lst:postgres1} -- \ref{lst:postgres4} и в листингах \ref{lst:redis1} -- \ref{lst:redis2} соответственно.
+
+Описание REST API проектируемого приложения представлено в таблице \ref{tbl:rest}.
+
+\begin{landscape}
+	\begin{longtable}{|p{0.4\textwidth}|p{0.125\textwidth}|p{0.9\textwidth}|}
+		\caption{Описание \texttt{REST API} реализуемого приложения}
+		\label{tbl:rest}\\
+		\hline
+		Путь & Метод & Описание \\
+		\endfirsthead
+		
+		\multicolumn{3}{l}
+		{{\tablename\ \thetable{} -- продолжение}} \\\hline 
+		Путь & Метод & Описание \\
+		\endhead
+		
+		\multicolumn{3}{|r|}{{Продолжение на следующей странице}} \\ \hline
+		\endfoot
+		
+		\hline \multicolumn{3}{|r|}{{Конец таблицы}} \\ \hline
+		\endlastfoot
+		\hline
+	    /signin   				& POST & Метод авторизации пользователя \\\hline
+		/signup               & POST & Метод для регистрации пользователя в системе\\\hline
+		/logout                & POST & Метод завершения сесссии пользователя \\\hline
+		
+		/entry\{id\}                & GET & Метод для получения временной записи по идентификатору \\\hline
+		/entry\{id\}  				& DELETE & Метод для удаления временной записи по идентификатору  \\\hline
+		/entry/create            & POST & Метод для создания временной записи \\\hline
+		/entry/edit                & POST &  Метод для редактирования временной записи \\\hline
+	    /me/entries              & GET & Метод для получения временных записей аутентифицированного пользователя \\\hline
+	    /user/\{user\_id\}/entries                & Get & Метод для получения временных записей пользователя  по его идентификатору \\\hline
+
+		/goal\{id\}                & GET & Метод для получения цели по идентификатору \\\hline
+		/goal\{id\}  				& DELETE & Метод для удаления цели по идентификатору  \\\hline
+		/goal/create            & POST & Метод для создания цели \\\hline
+		/goal/edit                & POST &  Метод для редактирования цели \\\hline
+		/me/goals              & GET & Метод для получения целей аутентифицированного пользователя \\\hline
+		/user/\{user\_id\}/goals                & Get & Метод для получения целей пользователя  по его идентификатору \\\hline
+		
+		/project\{id\}                & GET & Метод для получения проекта по идентификатору \\\hline
+		/project\{id\}  				& DELETE & Метод для удаления проекта по идентификатору  \\\hline
+		/project/create            & POST & Метод для создания проекта \\\hline
+		/project/edit                & POST &  Метод для редактирования проекта \\\hline
+		/me/projects              & GET & Метод для получения проектов аутентифицированного пользователя \\\hline
+		/user/\{user\_id\}/projects                & Get & Метод для получения проектов пользователя  по его идентификатору \\\hline
+		
+		/tag\{id\}                & GET & Метод для получения метки по идентификатору \\\hline
+		/tag\{id\}  				& DELETE & Метод для удаления метки по идентификатору  \\\hline
+		/tag/create            & POST & Метод для создания метки \\\hline
+		/tag/edit                & POST &  Метод для редактирования метки \\\hline
+		/me/tags              & GET & Метод для получения меток аутентифицированного пользователя \\\hline
+		/user/\{user\_id\}/tags                & Get & Метод для получения меток пользователя  по его идентификатору \\\hline
+		
+		/me                & GET & Метод для получения информации об аутентифицированном пользователе \\\hline
+		/me/edit  				& POST & Метод для редактирования информации об аутентифицированном пользователе \\\hline
+		/users           & GET & Метод для получения информации о всех пользователях  \\\hline
+		/user/\{user\_id\}             & Get & Метод для получения информации о пользователе  по его идентификатору \\\hline
+		
+		/friends/subscribe/\{user\_id\}                & POST & Метод для подписки на пользователя по его идентификатору \\\hline
+		/friends/subscribe/\{user\_id\}                & POST & Метод для отподписки на пользователя по его идентификатору \\\hline
+		/me/friends  				& GET & Метод для получения всех друзей аутентифицированного пользователя  \\\hline
+		/me/subs  				& GET & Метод для получения всех подписчиков аутентифицированного пользователя  \\\hline
+		/user/\{user\_id\}/subs             & Get & Метод для получения всех подписчиков  пользователя  по его идентификатору\\\hline
+		/user/\{user\_id\}/friends             & Get & Метод для получения всех друзей  пользователя  по его идентификатору\\\hline
+		
+		/admin/stat  & Get & Метод для получения статистики приложения \\\hline
+	\end{longtable}
+\end{landscape}
+
+\subsection{Тестирование}
+Для тестирования проекта были реализованы интеграционные тесты. В тестах проверялась интеграция приложения с базой данных. Для написания и запуска тестов использовался фреймворк языка Python pytest\cite{pytest}. Он выбран в качестве основного инструмента для автоматизированного тестирования, поскольку обладает широким набором функций и простым синтаксисом для написания тестов. Кроме того, для тестирования взаимодействия с базой данных использовался фреймворк sqlalchemy ORM\cite{sqlalchemy}.
+
+Конечные точки приложения можно разделить на 4 основных категории: создание, просмотр, редактирование и удаление, данных.
+Паттерн тестирования для каждой из категорий:
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item создание -- сначала происходит обращение к конечной точке на создание объекта с входными данными, затем проверяется наличие этого объекта в базе данных;
+	\item просмотр -- в базе данных создается объект, затем происходит обращение к конечной точке на получение  этого объекта;
+	\item редактирование -- в базе данных создается объект, затем происходит обращение к конечной точке на изменение этого объекта, проверяется что базе данных объект изменился;
+	\item удаление -- в базе данных создается объект, затем происходит обращение к конечной точке на удаление этого объекта, проверяется что в базе данных этого объекта нет.
+\end{itemize}
+
+Фикстура (fixture) в тестовом фреймворке - это функция, которая может быть запущена перед тестом или группой тестов и предоставляет необходимые данные и/или ресурсы для тестов.
+В данной курсовой работе фикстуры использовались для управления окружением тестирования и подготовки данных для тестов. В частности, использовались две основные фикстуры: одна для определения базового URL(Uniform Resource Locator) для API, а другая для управления базой данных. 
+
+Фикстура api\_url() возвращает базовый URL для API. 
+Фикстура \\db\_all\_tables() отвечает за управление базой данных в рамках тестов. Эта фикстура используется для подготовки БД перед выполнением тестов и для очистки БД после их выполнения. Это позволяет выполнять тесты на "чистой"\ базе данных и обеспечивает независимость тестов друг от друга. 
+
+Исходный код фикстур приведен в листинге \ref{lst:fixture}, тестирование на примере сущности "проект"\ в листингах \ref{lst:test} -- \ref{lst:test_6}.
+
+\subsection*{Вывод}
+В данном разделе:
+
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item определены основная СУБД и СУБД для хранения сессий;
+	\item выбран тип приложения;
+	\item определены средства реализации приложения;
+	\item представлен интерфейс взаимодействия с приложением;
+	\item приведены детали реализации разрабатываемого приложения и базы данных;
+	\item описаны методы и технологии тестирования.
+\end{itemize}
+
