--- a/50-conclusion.tex
+++ b/50-conclusion.tex
@@ -1,4 +1,22 @@
 \section*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 
+При выполнении курсовой работы была достигнута цель --  спроектирована и реализована база данных, содержащая данные учёта затраченного времени пользователей, разработан программный интерфейс приложения, который позволяет работать с этой базой данных.
+
+В ходе выполнения поставленной цели были выполнены следующие задачи:
+
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item проанализированы варианты модели данных и выбран подходящий вариант для решения задачи;
+	\item проанализированы существующие СУБД и выбраны удовлетворяющие требованиям к хранению данных;
+	\item спроектирована база данных, описаны ее сущности и связи;
+	\item реализовано программное обеспечение, предоставляющее интерфейс доступа к данным.
+\end{itemize}
+
+
+В процессе написания курсовой работы были получены знания в области проектирования баз данных, разработки Web-приложений, кеширования данных, нагрузочного тестирования. 
+
+В рамках выполнения данной курсовой работы было разработано программное обеспечение, предоставляющее  интерфейс для работы с базой данных. Для улучшения показателей производительности был реализован механизм кеширования ответов.
+
+Исследование показало, что кеширование при постоянной нагрузке(75 запросов в секунду) уменьшает время ответа сервиса на 15\%, в сравнении с вариантом без кеширования.
+
 \pagebreak
