--- a/60-bibliography.tex
+++ b/60-bibliography.tex
@@ -4,10 +4,86 @@
 \begingroup
 \renewcommand{\section}[2]{}
 \begin{thebibliography}{}
+	\bibitem{db}
+	Дейт К. Дж. Введение в системы баз данных. — 8-е изд. — М.: «Вильямс»,
+	2006.
+	\bibitem{rest-api}
+	Введение в Rest API [Электронный ресурс]. – Режим доступа:
+	https://mcs.mail.ru/blog/vvedenie-v-rest-api
+	свободный – (15.04.2023)
+	\bibitem{json}
+	Json [Электронный ресурс]. – Режим доступа:
+	https://www.json.org/json-ru.html,
+	свободный – (15.04.2023)
+	\bibitem{sql}
+	Structured Query Language (SQL) [Электронный ресурс]. – Режим доступа:
+	https://www.techtarget.com/searchdatamanagement/definition/SQL,
+	свободный – (15.04.2023)
+	\bibitem{sessions}
+	What is a Web Session? [Электронный ресурс]. – Режим доступа:
+	https://redisson.org/glossary/web-session.html,
+	свободный – (15.04.2023)
+
+	\bibitem{postgres}
+	PostgreSQL. [Электронный ресурс]. – Режим доступа:
+	https://www.postgresql.org/,
+	свободный – (21.05.2023)
+	
+	\bibitem{redis}
+	Redis. [Электронный ресурс]. – Режим доступа:
+	https://redis.io/,
+	свободный – (21.05.2023)
+	
 	\bibitem{golang}
-	Golang [Электронный ресурс]. – Режим доступа: 
-	https://golang.org/,
-	свободный – (03.06.2021)
+	Golang. [Электронный ресурс]. – Режим доступа:
+	https://go.dev/,
+	свободный – (21.05.2023)
+	
+	\bibitem{echo}
+	Echo. High performance, extensible, minimalist Go web framework. [Электронный ресурс]. – Режим доступа:
+	https://echo.labstack.com/,
+	свободный – (21.05.2023)
+	
+	\bibitem{docker}
+	Docker. [Электронный ресурс]. – Режим доступа:
+	https://www.docker.com/,
+	свободный – (21.05.2023)
+	
+	\bibitem{pytest}
+	Pytest. [Электронный ресурс]. – Режим доступа:
+	https://docs.pytest.org/en/7.3.x/contents.html,
+	свободный – (27.05.2023)
+	
+	\bibitem{sqlalchemy}
+	SQLAlchemy - The Database Toolkit for Python. [Электронный ресурс]. – Режим доступа:
+	https://www.sqlalchemy.org,
+	свободный – (27.05.2023)
+	
+	\bibitem{yandex-tank}
+	Yandex Tank. [Электронный ресурс]. – Режим доступа:
+	https://yandextank.readthedocs.io/en/latest/,
+	свободный – (27.05.2023)
+	
+	\bibitem{overload}
+	Overload a performance analytics service. [Электронный ресурс]. – Режим доступа:
+	https://overload.yandex.net/login/?next=/,
+	свободный – (27.05.2023)
+	
+	\bibitem{python}
+	Python. [Электронный ресурс]. – Режим доступа:
+	https://www.python.org/,
+	свободный – (27.05.2023)
+	
+	\bibitem{faker}
+	Faker. [Электронный ресурс]. – Режим доступа:
+	https://faker.readthedocs.io/en/master/,
+	свободный – (27.05.2023)
+	
+	\bibitem{intel}
+	Intel. [Электронный ресурс]. – Режим доступа:
+	https://www.intel.com/content/www/us/en/support/ru-banner-inside.html,
+	свободный – (27.05.2023)
+	
 \end{thebibliography}
 \endgroup
 
